kubernetes/apps/flux-system/flux-operator/instance/webhook/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
spec:
  ingressClassName: external
  rules:
    - host: "flux-webhook.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
            path: /hook/
            pathType: Prefix
